trunk/Archive2/4d/6e648d52a8f414/output
main.cpp:14:16: error: using-declaration for non-member at class scope
     using std::cout;
                ^
